kubernetes/apps/observability/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "grafana.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: otel-collector-grpc
  namespace: observability
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "otel.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: opentelemetry-collector
          port: 4317
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-collector-http
  namespace: observability
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "otel.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: opentelemetry-collector
          port: 4318
